test/call/nil.lox
null() // error: can only call functions and structures
